Добавлена справка и время

--- a/РГЗ-фронт2/РГЗ-фронт2/РГЗ-фронт2.csproj
+++ b/РГЗ-фронт2/РГЗ-фронт2/РГЗ-фронт2.csproj
@@ -59,6 +59,9 @@
       <DependentUpon>App.xaml</DependentUpon>
       <SubType>Code</SubType>
     </Compile>
+    <Compile Include="Help.xaml.cs">
+      <DependentUpon>Help.xaml</DependentUpon>
+    </Compile>
     <Compile Include="SettingsComPortWindow.xaml.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -95,6 +98,10 @@
     <Page Include="AuthWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="Help.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
